BikeStationDetailActivity.kt added, intents added in BikeStationsAdapter.kt,  BikeStationDetail view implemented Timber logs added, MapsFragment.kt updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bike Assistant</string>
+    <string name="title_activity_bike_station_detail">BikeStationDetailActivity</string>
 </resources>
